Rework handlers with OAS generated handlers (#1)
* refactored handlers to live under api package with server. Handlers now
implement the OAS interface using provided types and validation

* refactored resource fetching and optimize object and array transform to
reduce duplicate data.
